welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: not found: value CaseCouleur
	CaseCouleur=getCouleurSol();
        ^SlugSnail:23: error: not found: value CaseCouleur
  	if (getCouleurSol()==CaseCouleur) {
                             ^